--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "5.2.3",
     "chalk": "4.1.0",
     "history": "5.0.0",
+    "js-cookie": "3.0.1",
     "msw": "0.28.1",
     "react": "17.0.1",
     "react-bootstrap": "2.7.2",
